--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.2.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.9.7",
     "@testing-library/react": "^13.3.0",
@@ -28,11 +31,13 @@
     "dotenv": "^16.0.1",
     "eslint-webpack-plugin": "^3.1.1",
     "formik": "^2.2.9",
+    "framer-motion": "^6",
     "html-react-parser": "^3.0.1",
     "iconsax-react": "^0.0.8",
     "jwt-decode": "^3.1.2",
     "next": "^12.2.2",
     "next-images": "^1.8.4",
+    "nextjs-progressbar": "^0.0.14",
     "nookies": "^2.5.2",
     "polished": "^4.2.2",
     "react": "^18.1.0",
@@ -42,6 +47,8 @@
     "react-icons": "^4.4.0",
     "react-lottie": "^1.2.3",
     "react-query": "^3.38.1",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.7",
     "styled-components": "^5.3.5",
     "ts-jest-mock": "^1.1.32",
     "uuidv4": "^6.2.13",
@@ -58,6 +65,8 @@
     "@types/react": "^18.0.8",
     "@types/react-icons": "^3.0.0",
     "@types/react-lottie": "^1.2.6",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.5",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
