--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@chakra-ui/react": "^2.2.6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@headlessui/react": "^1.6.6",
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.9.7",
     "@testing-library/react": "^13.3.0",
@@ -33,12 +34,14 @@
     "formik": "^2.2.9",
     "framer-motion": "^6",
     "html-react-parser": "^3.0.1",
+    "html2canvas": "^1.4.1",
     "iconsax-react": "^0.0.8",
     "jwt-decode": "^3.1.2",
     "next": "^12.2.2",
     "next-images": "^1.8.4",
     "nextjs-progressbar": "^0.0.14",
     "nookies": "^2.5.2",
+    "phosphor-react": "^1.4.1",
     "polished": "^4.2.2",
     "react": "^18.1.0",
     "react-div-100vh": "^0.7.0",
@@ -59,6 +62,8 @@
     "@commitlint/config-conventional": "^16.2.4",
     "@next/bundle-analyzer": "^12.1.6",
     "@next/eslint-plugin-next": "^12.1.0",
+    "@savvywombat/tailwindcss-grid-areas": "^2.1.0",
+    "@tailwindcss/forms": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/user-event": "^14.2.1",
     "@types/node": "17.0.21",
@@ -70,6 +75,7 @@
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
+    "autoprefixer": "^10.4.8",
     "cross-env": "^7.0.3",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -88,7 +94,10 @@
     "jest-environment-jsdom": "^28.1.1",
     "jest-styled-components": "^7.0.8",
     "lint-staged": "^12.4.1",
+    "postcss": "^8.4.16",
     "prettier": "^2.5.1",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwindcss": "^3.1.8",
     "ts-node": "^10.8.1",
     "typescript": "4.6.2",
     "webpack-livereload-plugin": "^3.0.2"
